# neural_network

./: .gitignore  .gitmodules
neural_network/: CMakeLists.txt  cmake_vs_19.bat  googletest_init.bat  pch.h
neural_network/examples/: CMakeLists.txt
neural_network/examples/demodulator_8psk/: CMakeLists.txt  main.cpp
neural_network/examples/demodulator_8psk/data/: training_set.dt
neural_network/examples/logical_xor/: CMakeLists.txt  main.cpp
neural_network/matrix_lib/: CMakeLists.txt  matrix_exception.h  matrix_lib.h
neural_network/neural_network_lib/: CMakeLists.txt
neural_network/neural_network_lib/include/: activation_functions.h  back_propagation.h  error_handle.h  file_handler.h  input_layer.h  layer.h  loss_functions.h  neural_network.h  neuron.h  training.h
neural_network/neural_network_lib/src/: back_propagation.cpp  error_handle.cpp  file_handler.cpp  input_layer.cpp  layer.cpp  loss_functions.cpp  neural_network.cpp  neuron.cpp  training.cpp
neural_network/project/: CMakeLists.txt  main.cpp
neural_network/src/: CMakeLists.txt
neural_network/src/neural_network_lib/: CMakeLists.txt
neural_network/test/: CMakeLists.txt
neural_network/test/matlab/: Turbo_coder.slx
neural_network/tests/: CMakeLists.txt  auxillary_functions.h  back_propagation_tests.h  layer_tests.h  matrix_tests.h  neural_network_tests.h  neuron_tests.h  run_all_tests.cpp
neural_network/tests/tests_back_propagation/: CMakeLists.txt  tests_back_propagation.cpp
neural_network/tests/tests_layer/: CMakeLists.txt  tests_layer.cpp
neural_network/tests/tests_matrix/: CMakeLists.txt  tests_matrix.cpp
neural_network/tests/tests_neural_network/: CMakeLists.txt  tests_neural_network.cpp
neural_network/tests/tests_neuron/: CMakeLists.txt  tests_neuron.cpp
template_project/: CMakeLists.txt
template_project/project/: CMakeLists.txt  main.cpp
template_project/src/: CMakeLists.txt
template_project/src/labrary_1/: CMakeLists.txt
template_project/src/labrary_2/: CMakeLists.txt
template_project/test/matlab/: RSC_1_2.slx  turbo_simhandler.m
